# SeikinUnmoving-backend

./: .dockerignore  .env  .gitignore  .lefthook.yaml  .sqlx-config.toml  Cargo.toml  DEPLOY.md  GITHUB_ACTIONS_SETUP.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: Cargo.toml  README.md  wrangler.toml
api/src/: lib.rs
api/src/routes/: health.rs  mod.rs
apiroute/: Cargo.toml
apiroute/dev/: .env  Dockerfile  entrypoint.sh
apiroute/src/: main.rs
apiroute/src/router/: build.rs  mod.rs
db/: README.md  run-migrations.sh
db/init/: 01_init.sql
db/migrations/: 20241115000001_create_users_table.down.sql  20241115000001_create_users_table.up.sql
services/authservice/: Cargo.toml
services/authservice/src/application/: mod.rs
services/authservice/src/domain/: mod.rs
services/authservice/src/infrastructure/repositories/: mod.rs
services/gameservice/src/application/: mod.rs
services/gameservice/src/domain/: mod.rs
services/rankingservice/: Cargo.toml
services/rankingservice/src/application/: mod.rs
services/rankingservice/src/domain/: mod.rs
services/rankingservice/src/infrastructure/repositories/: mod.rs
services/userservice/: Cargo.toml
services/userservice/src/: lib.rs
services/userservice/src/application/: mod.rs  user_service.rs
services/userservice/src/domain/: mod.rs  user_repository.rs
services/userservice/src/domain/models/: error.rs  id.rs  user.rs
services/userservice/src/domain/services/: uuid_service.rs
services/userservice/src/infrastructure/repositories/: mod.rs  user_repository.rs
services/userservice/src/infrastructure/services/: mod.rs  uuid_service.rs
