[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# 独立したプロジェクトとして扱う（親ワークスペースから除外）
[workspace]

[dependencies]
worker = "0.6.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"     # 最小サイズに最適化
lto = true          # Link Time Optimization
codegen-units = 1   # 最適化を向上
