[package]
name = "apiroute"
version = "0.1.0"
edition = "2024"

[dependencies]
authservice = { path = "../services/authservice" }
axum = "0.8.6"
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
