[package]
name = "apiroute"
version = "0.1.0"
edition = "2024"

[dependencies]
authservice = { path = "../services/authservice" }
userservice = { path = "../services/userservice" }
gameservice = { path = "../services/gameservice" }
rankingservice = { path = "../services/rankingservice" }
worker = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

# 開発環境用（Dockerなど）
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8.6"
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
