[package]
name = "userservice"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "uuid"] }
thiserror = "2.0.17"
tokio = "1.48.0"
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.26.1"
